--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@docusaurus/module-type-aliases": "3.6.2",
     "@docusaurus/tsconfig": "3.6.2",
     "@docusaurus/types": "3.6.2",
-    "typescript": "~5.6.2"
+    "@eslint/js": "9.15.0",
+    "@stylistic/eslint-plugin": "2.11.0",
+    "eslint": "9.15.0",
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.15.0"
   },
   "browserslist": {
     "production": [
