--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/core": "3.6.2",
     "@docusaurus/faster": "3.6.3",
     "@docusaurus/preset-classic": "3.6.2",
+    "@giscus/react": "3.0.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
